conenct prob works now