@@ -28,4 +28,27 @@
             <version>2.10.1</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <compilerArgs>
+                        <arg>--add-opens=java.base/java.net=ALL-UNNAMED</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>dk.sdu.st4.assemblystation.SmokeTest</mainClass>
+                    <executable>java</executable>
+                    <commandlineArgs>--add-opens java.base/java.net=ALL-UNNAMED -m dk.sdu.st4.assemblystation/dk.sdu.st4.assemblystation.SmokeTest</commandlineArgs>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
